test/classes/errors/nilability-init-field-arg/init-field-arg-oknil-shared-from-nonnil-owned.bad
init-field-arg-oknil-shared-from-nonnil-owned.chpl:9: In initializer:
init-field-arg-oknil-shared-from-nonnil-owned.chpl:10: error: cannot assign expression of type borrowed MyClass to field 'chpl_t' of type borrowed MyClass?
